--- a/Dev-Cpp/config/devcpp.ini
+++ b/Dev-Cpp/config/devcpp.ini
@@ -114,7 +114,7 @@ Size=10
 Current=0
 [Directories]
 Exec="C:\Users\hgx95\Desktop\Dev-Cpp\"
-Config="C:\Users\hgx95\Desktop\Dev-Cpp\.\config\"
+Config="C:\Users\hgx95\Desktop\GraphicsSamples\Dev-Cpp\.\config\"
 Default=""
 Help="%path%\Help\"
 Icons="%path%\Icons\"
@@ -214,8 +214,7 @@ Dummy=0
 0=C:\Users\hgx95\Desktop\Project2.dev
 1=C:\Users\hgx95\Desktop\Project3.dev
 2=C:\Users\hgx95\Desktop\GraphicsSamples\Clase1\BanderaAlemania.cpp
-3=Untitled1
-4=C:\Users\hgx95\Desktop\GraphicsSamples\Instrucciones..txt
-5=C:\Users\hgx95\Desktop\GraphicsSamples\Clase1\AnimacionCirculo.cpp
-6=C:\Users\hgx95\Desktop\Untitled2.cpp
-7=C:\Users\hgx95\Desktop\GraphicsSamples\Clase1\BanderaAlemania.o
+3=C:\Users\hgx95\Desktop\GraphicsSamples\Instrucciones..txt
+4=C:\Users\hgx95\Desktop\GraphicsSamples\Clase1\AnimacionCirculo.cpp
+5=C:\Users\hgx95\Desktop\Untitled2.cpp
+6=C:\Users\hgx95\Desktop\GraphicsSamples\Clase1\BanderaAlemania.o
